# Agentic_LangGraph

./: .gitignore  README.md  pyproject.toml  requirements.txt
1-BasicChatbot/: 1-chatbot.ipynb
2-HumanAssistance/: 1-humaninthe_loop.ipynb
3-Debugging/: agent.py  debugging.ipynb
4-MultiAI_Agent/: multi_aiagent.ipynb  multiaiagent.ipynb
MCP_server/: client.py  mathserver.py  weather.py
