[project]
name = "agentic-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.4",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-tavily>=0.2.4",
    "langgraph>=0.4.8",
    "langgraph-api>=0.2.64",
    "langgraph-cli[inmen]>=0.3.3",
    "langsmith>=0.4.1",
    "mcp>=1.9.4",
    "python-dotenv>=1.1.1",
]
